zz-out/pass14_run2/zz-scripts/chapter07/plot_fig05_ddelta_phi_vs_k.err
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig05_ddelta_phi_vs_k.py", line 128
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
